--- a/assets/css/_layout.scss
+++ b/assets/css/_layout.scss
@@ -4,15 +4,16 @@ body {
     background-color: $cor-primaria;
   }
   .container {
-    max-width: 600px; /* Largura máxima do container */
-    background-color: white;
+    max-width: 80%; /* Largura máxima do container */
+    background-color: #ffffff;
     /* border-width: 1px;
         border-style: solid;
         border-color: red; */
     margin-left: auto;
     margin-right: auto;
     padding: 20px;
-    border-radius: 50px;
-    border-radius: calc($borda-arredondada * 5);
+    border-radius: 10px;
+    margin-top: 50px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   }
   
