--- a/assets/css/_menu.scss
+++ b/assets/css/_menu.scss
@@ -4,13 +4,12 @@
   }
   
   .menu {
-    display: flex;
-    justify-content: space-between;
-    border-style: solid;
-    border-width: 1px;
-    border-color: rgb(255, 213, 234);
-    padding: 10px;
-    margin-bottom: 20px;
+    .menu {
+      display: flex;
+      justify-content: space-between;
+      padding: 10px;
+      margin-bottom: 20px;
+    }
   
     li {
       font-weight: bold;
